--- a/src/css/Practice2.css
+++ b/src/css/Practice2.css
@@ -5,6 +5,7 @@
   justify-content: center;
   padding: 0 20% 0 20%;
   line-height: 2.3rem;
+  overflow: scroll;
 }
 
 .practice2Container > h4 {
